--- a/notebooks/A2_Production_Inference.ipynb
+++ b/notebooks/A2_Production_Inference.ipynb
@@ -26,6 +26,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## A2 Criteria: Definition of the Learning Task (Deployment)\n",
+        "- Input: `user_id` and recent interaction history (or fetched from events)\n",
+        "- Output: Top-N ranked recommendations with scores and recipe metadata\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
@@ -114,6 +123,15 @@
         "\n",
         "### Production Workflow\n",
         "The `RecipeScorer` class orchestrates this entire pipeline, loading the saved model artifacts from training and applying them to score recipes for any user in real-time.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## A2 Criteria: Knowledge of Model and Algorithm\n",
+        "- Uses LightGBM LambdaRank model trained on per-user groups\n",
+        "- Inference loads model, metadata, and recipe features; scores then ranks\n"
       ]
     },
     {
@@ -345,6 +363,16 @@
         "else:\n",
         "    print(f\"Generated {len(recommendations)} personalized recommendations:\")\n",
         "    display(recs_df[[\"recipe_id\", \"recipe_name\", \"score\"]].head(100))\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## A2 Criteria: Evaluation and Improvement\n",
+        "- Practical objective: high-quality top-N for each user; measured with NDCG/Recall\n",
+        "- Model behavior: scores reflect relative ordering, not probabilities\n",
+        "- Improvements: revisit feature catalog, event weights, and user grouping choices\n"
       ]
     },
     {
