--- a/notebooks/A2_Production_Training.ipynb
+++ b/notebooks/A2_Production_Training.ipynb
@@ -27,6 +27,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## A2 Criteria: Definition of the Learning Task (Training)\n",
+        "- Input: user–recipe interactions, recipe features, engagement-weighted labels with negatives\n",
+        "- Output: train/val/test datasets, feature columns, metadata, trained model artifacts\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {},
@@ -111,6 +120,15 @@
         "- **Recipe-ingredient relationships**: Detailed ingredient lists for content-based filtering\n",
         "\n",
         "The `TrainingDataBuilder` class orchestrates this entire data preparation pipeline.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## A2 Criteria: Knowledge of Model and Algorithm\n",
+        "- LightGBM LambdaRank, ndcg-based objective with user-grouped lists\n",
+        "- Theory → code: objective/metric/ndcg_eval_at, group arrays, early stopping\n"
       ]
     },
     {
@@ -240,6 +258,17 @@
         "train_df, val_df, test_df = builder.prepare_training_data()\n",
         "\n",
         "print(\"Dataset shapes - Train:\", train_df.shape, \"Validation:\", val_df.shape, \"Test:\", test_df.shape)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## A2 Criteria: Evaluation and Improvement\n",
+        "- Behavior: outputs relevance scores for ranking\n",
+        "- Loss vs objective: LambdaRank optimizes NDCG proxy; business cares about top-N quality\n",
+        "- Metrics: NDCG@k, Recall@k, Spearman\n",
+        "- Improvements: tune sampling, features, and ranking cutoffs\n"
       ]
     },
     {
